--- a/nextjs/styles/variables.css
+++ b/nextjs/styles/variables.css
@@ -75,6 +75,7 @@
   --size-spacing-10: 10px;
   --size-spacing-15: 15px;
   --size-spacing-20: 20px;
+  --size-spacing-25: 25px;
   --size-spacing-30: 30px;
   --size-spacing-60: 60px;
 
