--- a/nextjs/components/FrontendGridNavItem/styles.module.css
+++ b/nextjs/components/FrontendGridNavItem/styles.module.css
@@ -24,13 +24,16 @@
 }
 
 @media (max-width: 500px) {
-	.container {
-		border-left: none;
-		border-right: none;
+	.container,
+	.container:hover,
+	.container:active {
+		border: none;
 		padding: var(--size-spacing-15) var(--size-spacing-20);
 		border-top: 1px solid var(--color-system-border-100);
 	}
-	.container:last-child {
+	.container:last-child,
+	.container:last-child:hover,
+	.container:last-child:active {
 		border-bottom: 1px solid var(--color-system-border-100);
 	}
 }
