--- a/nextjs/components/FrontendHomepageNews/styles.module.css
+++ b/nextjs/components/FrontendHomepageNews/styles.module.css
@@ -6,6 +6,12 @@
 	padding-right: 0;
 }
 
+@media only screen and (max-width: 900px) {
+  .slideWrapper {
+		padding-top: 0;
+	}
+}
+
 /* * */
 /* CAROUSEL CONTAINER */
 
