--- a/nextjs/styles/reset.css
+++ b/nextjs/styles/reset.css
@@ -25,7 +25,7 @@ a {
   box-sizing: border-box;
   user-select: none;
   -webkit-touch-callout: none;
-  font-family: inter, sans-serif;
+  font-family: var(--font-inter), sans-serif;
 }
 
 input,
