--- a/frontend/components/home/Page/styles.module.css
+++ b/frontend/components/home/Page/styles.module.css
@@ -15,19 +15,21 @@
 }
 
 /* * */
-/*  */
+/* QUICK SEARCH WRAPPER */
 
-.quickSearchWrapper,
-.carouselWrapper {
+.quickSearchWrapper {
 	background-color: var(--color-brand);
-	aspect-ratio: 16/9;
-	display: flex;
-	align-items: center;
-	justify-content: center;
 }
 
 @media only screen and (max-width: 900px) {
 	.quickSearchWrapper {
 		display: none;
 	}
+}
+
+/* * */
+/* CAROUSEL WRAPPER */
+
+.carouselWrapper {
+	aspect-ratio: 16/9;
 }
