--- a/frontend/styles/variables.css
+++ b/frontend/styles/variables.css
@@ -82,6 +82,7 @@
 	/* * */
 	/* FONT */
 
+	--font-weight-extrabold: 800; /* ExtraBold */
 	--font-weight-bold: 700; /* SemiBold */
 	--font-weight-semibold: 600; /* SemiBold */
 	--font-weight-medium: 500; /* SemiBold */
