--- a/frontend/components/home/QuickSearchWidget/styles.module.css
+++ b/frontend/components/home/QuickSearchWidget/styles.module.css
@@ -29,3 +29,24 @@
 	color: var(--color-primary-black);
 	opacity: 0.75;
 }
+
+/* * */
+/* SEARCH WRAPPER */
+
+.searchWrapper {
+	display: flex;
+	flex-direction: column;
+	gap: var(--size-spacing-15);
+	justify-content: flex-start;
+	align-items: flex-start;
+	width: 100%;
+}
+
+.searchInputWrapper {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: stretch;
+	gap: 10px;
+}
