--- a/frontend/components/common/CustomSegmentedControl/styles.module.css
+++ b/frontend/components/common/CustomSegmentedControl/styles.module.css
@@ -1,8 +1,14 @@
 .label[data-active="true"]{
     color: var(--color-system-text-200);
+    --input-section-color: var(--color-system-text-200);
+    --input-color: var(--color-system-text-200);
+    --mantine-color-text: var(--color-system-text-200);
 }
 .label{
     font-weight: 600;
     padding-left: 0;
     padding-right: 0;
+    color: var(--color-system-text-300);
+    --input-section-color: var(--color-system-text-300);
+    --mantine-color-text: var(--color-system-text-300);
 }
