Cleanup, renamed variable, bump packages

--- a/frontend-old/components/header/Header/styles.module.css
+++ b/frontend-old/components/header/Header/styles.module.css
@@ -30,7 +30,7 @@
 	margin: auto;
 	width: 100%;
 	height: 100%;
-	max-width: var(--size-global-width);
+	max-width: var(--size-width-global);
   align-items: center;
   justify-content: space-between;
 	background-color: var(--color-system-background-100);
