--- a/frontend-old/styles/variables.css
+++ b/frontend-old/styles/variables.css
@@ -66,7 +66,7 @@
 	/* * */
 	/* SIZE / GLOBAL WIDTH */
 
-	--size-global-width: 1200px;
+	--size-width-global: 1200px;
 
 	/* * */
 	/* SIZE / SPACING */
