--- a/frontend/components/layout/Section/styles.module.css
+++ b/frontend/components/layout/Section/styles.module.css
@@ -7,10 +7,11 @@
 	flex-direction: column;
 	align-items: flex-start;
 	justify-content: center;
-	max-width: var(--size-global-width);
+	max-width: var(--size-width-global);
 	margin: auto;
 	padding-top: var(--size-spacing-30);
 	background-color: var(--color-system-background-100);
+	gap: var(--size-spacing-20);
 }
 
 .container.withTopBorder {
@@ -43,6 +44,12 @@
 	width: 100%;
 	padding-left: var(--size-spacing-25);
 	padding-right: var(--size-spacing-20);
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: flex-start;
+	gap: var(--size-spacing-10);
+
 }
 
 .withGlobalPadding .headingWrapper {
@@ -57,6 +64,16 @@
 	font-size: var(--font-size-heading);
 	font-weight: var(--font-weight-heading);
 	color: var(--color-system-text-100);
+}
+
+/* * */
+/* SUBHEADING */
+
+.subheading {
+	font-size: var(--font-size-text);
+	font-weight: var(--font-weight-text);
+	color: var(--color-system-text-200);
+	max-width: var(--size-width-heading);
 }
 
 /* * */
