--- a/frontend/styles/variables.css
+++ b/frontend/styles/variables.css
@@ -2,30 +2,30 @@
 
 :root {
 
-  /* * */
-  /* COLOR / BRAND */
+	/* * */
+	/* COLOR / BRAND */
 
-  --color-brand: #ffdd01;
+	--color-brand: #ffdd01;
 
-  /* * */
-  /* COLOR / DEBUG */
+	/* * */
+	/* COLOR / DEBUG */
 
 	--color-debug: #055252;
 
-  /* * */
-  /* COLOR / SYSTEM */
+	/* * */
+	/* COLOR / SYSTEM */
 
 	--color-system-background-100: #ffffff;
-  --color-system-background-200: #fafafa;
-  --color-system-background-300: #f0f0f0;
+	--color-system-background-200: #fafafa;
+	--color-system-background-300: #f0f0f0;
 
 	--color-system-border-100: #f0f0fa;
-  --color-system-border-200: #bebec8;
+	--color-system-border-200: #bebec8;
 
 	--color-system-text-100: #000000;
-  --color-system-text-200: #5a5a64;
-  --color-system-text-300: #9696a0;
-  --color-system-text-400: #d2d2dc;
+	--color-system-text-200: #5a5a64;
+	--color-system-text-300: #9696a0;
+	--color-system-text-400: #d2d2dc;
 
 	/* * */
 	/* COLOR / PRIMARY */
@@ -55,29 +55,30 @@
 	/* * */
 	/* COLOR / REALTIME */
 
-  --color-realtime-0: rgba(0, 215, 50, 0);
-  --color-realtime-5: rgba(0, 215, 50, 0.05);
-  --color-realtime-15: rgba(0, 215, 50, 0.15);
-  --color-realtime-25: rgba(0, 215, 50, 0.25);
-  --color-realtime-50: rgba(0, 215, 50, 0.5);
-  --color-realtime-75: rgba(0, 215, 50, 0.75);
-  --color-realtime-100: rgba(0, 205, 50, 1);
+	--color-realtime-0: rgba(0, 215, 50, 0);
+	--color-realtime-5: rgba(0, 215, 50, 0.05);
+	--color-realtime-15: rgba(0, 215, 50, 0.15);
+	--color-realtime-25: rgba(0, 215, 50, 0.25);
+	--color-realtime-50: rgba(0, 215, 50, 0.5);
+	--color-realtime-75: rgba(0, 215, 50, 0.75);
+	--color-realtime-100: rgba(0, 205, 50, 1);
 
 	/* * */
-	/* SIZE / GLOBAL WIDTH */
+	/* SIZE / WIDTH */
 
-	--size-global-width: 1200px;
+	--size-width-global: 1200px;
+	--size-width-heading: 700px;
 
 	/* * */
 	/* SIZE / SPACING */
 
 	--size-spacing-5: 5px;
-  --size-spacing-10: 10px;
-  --size-spacing-15: 15px;
-  --size-spacing-20: 20px;
-  --size-spacing-25: 25px;
-  --size-spacing-30: 30px;
-  --size-spacing-60: 60px;
+	--size-spacing-10: 10px;
+	--size-spacing-15: 15px;
+	--size-spacing-20: 20px;
+	--size-spacing-25: 25px;
+	--size-spacing-30: 30px;
+	--size-spacing-60: 60px;
 
 	/* * */
 	/* FONT */
@@ -147,15 +148,15 @@
 /* * */
 
 @media only screen and (max-width: 900px) {
-  only-desktop {
-    display: none;
-  }
+	only-desktop {
+		display: none;
+	}
 }
 
 @media only screen and (min-width: 901px) {
-  only-mobile {
-    display: none;
-  }
+	only-mobile {
+		display: none;
+	}
 }
 
 /* * */
