--- a/frontend/components/header/Header/styles.module.css
+++ b/frontend/components/header/Header/styles.module.css
@@ -4,9 +4,9 @@
 /* center elements inside it, allow for full height menus */
 /* and compensate for the fixed positioning */
 
-.spacer,
-.container {
-	height: 70px;
+.spacer {
+	display: block;
+	height: 71px; /* The default value for SSR */
 }
 
 /* * */
@@ -31,8 +31,8 @@
 	width: 100%;
 	height: 100%;
 	max-width: var(--size-width-global);
-  align-items: center;
-  justify-content: space-between;
+	align-items: center;
+	justify-content: space-between;
 	background-color: var(--color-system-background-100);
 	border-bottom: 1px solid var(--color-system-border-100);
 }
@@ -46,6 +46,5 @@
 	gap: var(--size-spacing-30);
 	width: 100%;
 	height: 100%;
-  align-items: center;
-  justify-content: flex-end;
+	justify-content: flex-end;
 }
