--- a/frontend/components/header/Status/styles.module.css
+++ b/frontend/components/header/Status/styles.module.css
@@ -12,6 +12,10 @@
   border-bottom: 1px solid var(--color-system-border-100);
 }
 
+.container.asLink {
+	  cursor: pointer;
+}
+
 .style_info.container {
 	background-color: var(--color-status-info-background);
 }
@@ -76,78 +80,39 @@
 }
 
 /* * */
-/* TICKER WRAPPER */
+/* MESSAGE WRAPPER */
 
-.tickerWrapper {
+.messageWrapper {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	overflow-x: hidden;
-	width: 100%;
-}
-
-/* * */
-/* TICKER MESSAGE */
-
-.tickerMessage {
-	display: flex;
-	flex-direction: row;
-	gap: 15px;
+	gap: var(--size-spacing-15);
+	overflow-x: auto;
 	padding-left: 15px;
 	padding-right: 15px;
+	white-space: nowrap;
 }
 
-
-.container:hover .tickerMessage {
-	-webkit-animation-play-state: paused;
-	-moz-animation-play-state: paused;
-	-o-animation-play-state: paused;
-	animation-play-state: paused;
-}
-
-@keyframes testScrollAnimation {
-	0% { transform: translateX(0); }
-	50% { transform: translateX(-100%); opacity: 1; }
-	51% { transform: translateX(-100%); opacity: 0; }
-	52% { transform: translateX(100%); opacity: 0; }
-	53% { transform: translateX(100%); opacity: 1; }
-	100% { transform: translateX(0); }
-}
-
-
-/* * */
-/* TICKER TITLE */
-
-.tickerTitle {
-  font-size: var(--font-size-subtitle);
-  font-weight: var(--font-weight-subtitle);
-  white-space: nowrap;
-}
-
-/* * */
-/* TICKER BODY */
-
-.tickerBody {
-  font-size: 18px;
-  color: var(--reference-1);
-  white-space: nowrap;
-}
-
-/* * */
-/* MESSAGE STYLE */
-
-.style_info .tickerMessage {
+.style_info .messageWrapper {
 	color: var(--color-status-info-text);
 }
 
-.style_ok .tickerMessage {
+.style_ok .messageWrapper {
 	color: var(--color-status-ok-text);
 }
 
-.style_warning .tickerMessage {
+.style_warning .messageWrapper {
 	color: var(--color-status-warning-text);
 }
 
-.style_danger .tickerMessage {
+.style_danger .messageWrapper {
 	color: var(--color-status-danger-text);
+}
+
+/* * */
+/* TITLE */
+
+.title {
+	font-size: var(--font-size-subtitle);
+	font-weight: var(--font-weight-subtitle);
 }
