Added initial frontend featured section

--- a/frontend/styles/variables.css
+++ b/frontend/styles/variables.css
@@ -82,6 +82,7 @@
 	--size-spacing-20: 20px;
 	--size-spacing-25: 25px;
 	--size-spacing-30: 30px;
+	--size-spacing-40: 40px;
 	--size-spacing-60: 60px;
 
 	/* * */
