--- a/frontend/components/home/Page/styles.module.css
+++ b/frontend/components/home/Page/styles.module.css
@@ -1,7 +1,7 @@
 /* * */
-/* FEATURED WRAPPER */
+/* INTRO WRAPPER */
 
-.featuredWrapper {
+.introWrapper {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	gap: 1px;
@@ -9,7 +9,7 @@
 }
 
 @media only screen and (max-width: 900px) {
-	.featuredWrapper {
+	.introWrapper {
 		grid-template-columns: 1fr;
 	}
 }
