--- a/frontend/components/home/FeaturedSection/styles.module.css
+++ b/frontend/components/home/FeaturedSection/styles.module.css
@@ -6,3 +6,10 @@
 	grid-template-columns: 1fr 1fr 1fr;
 	gap: var(--size-spacing-20);
 }
+
+@media only screen and (max-width: 900px) {
+	.innerWrapper {
+		grid-template-columns: 1fr;
+		padding: var(--size-spacing-20);
+	}
+}
