Added GroupedListItem as layout pattern

--- a/frontend/components/stores/Topic/styles.module.css
+++ b/frontend/components/stores/Topic/styles.module.css
@@ -1,4 +1,48 @@
 /* * */
+/* CONTAINER */
+
+.container {
+	width: 100%;
+	padding-bottom: var(--size-spacing-60);
+}
+
+/* * */
+/* TOPIC HEADER */
+
+.topicHeader {
+	padding: 0 var(--size-spacing-25);
+	padding-bottom: var(--size-spacing-15);
+}
+
+@media (max-width: 500px) {
+	.topicHeader {
+		padding: 0 var(--size-spacing-20);
+		padding-bottom: var(--size-spacing-15);
+	}
+}
+
+/* * */
+/* TOPIC LABEL */
+
+.topicLabel {
+	color: var(--color-system-text-300);
+	font-size: 10px;
+	font-weight: 700;
+	text-align: left;
+	text-transform: uppercase;
+	padding-bottom: 3px;
+}
+
+/* * */
+/* TOPIC TITLE */
+
+.topicTitle {
+	font-size: var(--font-size-subtitle);
+	color: var(--color-system-text-100);
+	font-weight: var(--font-weight-bold);
+}
+
+/* * */
 /* ACCORDION ITEM */
 
 .accordionItem {
