--- a/frontend/components/layout/GroupedListItem/styles.module.css
+++ b/frontend/components/layout/GroupedListItem/styles.module.css
@@ -14,23 +14,18 @@
 	padding-bottom: var(--size-spacing-15);
 }
 
-@media (max-width: 500px) {
-	.header {
-		padding: 0 var(--size-spacing-20);
-		padding-bottom: var(--size-spacing-15);
-	}
-}
-
 /* * */
 /* LABEL */
 
 .label {
 	color: var(--color-system-text-300);
 	font-size: 10px;
-	font-weight: 700;
+	font-weight: var(--font-weight-extrabold);
+	letter-spacing: 0.5px;
 	text-align: left;
 	text-transform: uppercase;
 	padding-bottom: 3px;
+	padding-left: 1px;
 }
 
 /* * */
@@ -40,4 +35,11 @@
 	font-size: var(--font-size-subtitle);
 	color: var(--color-system-text-100);
 	font-weight: var(--font-weight-bold);
+}
+
+/* * */
+/* CHILDREN WRAPPER */
+
+.childrenWrapper {
+	border-bottom: 1px solid var(--color-system-border-100);
 }
