--- a/frontend/components/stores/StoreItem/styles.module.css
+++ b/frontend/components/stores/StoreItem/styles.module.css
@@ -44,6 +44,7 @@
 	align-items: center;
 	justify-content: flex-start;
 	gap: var(--size-spacing-5);
+	line-height: 1;
 }
 
 .realtimeStatus .value {
