--- a/frontend/components/stores/StoresListItemRealtime/styles.module.css
+++ b/frontend/components/stores/StoresListItemRealtime/styles.module.css
@@ -41,6 +41,10 @@
 	color: var(--color-status-danger-text);
 }
 
+.isUnknown .label {
+	color: var(--color-system-text-300);
+}
+
 /* * */
 /* VALUE */
 
