--- a/frontend/styles/overrides/SegmentedControl.module.css
+++ b/frontend/styles/overrides/SegmentedControl.module.css
@@ -11,6 +11,12 @@
 	background-color: rgba(255, 255, 255, 0.5);
 }
 
+@media screen and (max-width: 350px) {
+	.root {
+		flex-direction: column;
+	}
+}
+
 /* * */
 /* INDICATOR */
 
@@ -29,13 +35,23 @@
 .label {
 	font-size: 17px;
 	font-weight: var(--font-weight-semibold);
-	color: var(--color-system-text-300);
-	padding: 10px 35px;
+	color: var(--color-system-text-200);
+	padding: var(--size-spacing-10);
 	transition: all 300ms ease;
+}
+
+@media screen and (max-width: 500px) {
+	.label {
+		font-size: 14px;
+	}
 }
 
 .label[data-active="true"] {
 	color: var(--color-system-text-100);
+}
+
+.label[data-disabled="true"] {
+	color: var(--color-system-text-400);
 }
 
 .label.variantWhite {
