--- a/frontend/components/alerts/AlertsListItem/styles.module.css
+++ b/frontend/components/alerts/AlertsListItem/styles.module.css
@@ -8,7 +8,7 @@
 	justify-content: flex-start;
 	gap: var(--size-spacing-20);
 	padding: var(--size-spacing-20);
-	border-top: 1px solid var(--color-system-border-100);
+	padding-top: 0;
 	background-color: var(--color-system-background-100);
 }
 
