--- a/frontend/components/alerts/AlertsListItem/styles.module.css
+++ b/frontend/components/alerts/AlertsListItem/styles.module.css
@@ -1,53 +1,37 @@
 /* * */
-/* CONTAINER */
+/* CONTENT WRAPPER */
 
-.container {
+.contentWrapper {
+	padding: var(--size-spacing-20) ;
+	padding-top: var(--size-spacing-5);
+	padding-left: 56px;
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
 	justify-content: flex-start;
 	gap: var(--size-spacing-20);
-	padding: var(--size-spacing-20);
-	padding-top: 0;
-	background-color: var(--color-system-background-100);
 }
 
 /* * */
-/* HEADER */
+/* DESCRIPTION */
 
-.header {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	justify-content: flex-start;
-}
-
-.storeBrand {
+.description {
 	font-size: var(--font-size-text);
-	font-weight: var(--font-weight-medium);
-	color: var(--color-system-text-300);
-}
-
-.storeName {
-	font-size: var(--font-size-heading);
-	font-weight: var(--font-weight-bold);
-	color: var(--color-system-text-100);
-	margin-bottom: -10px;
+	font-weight: var(--font-weight-text);
+	color: var(--color-system-text-200);
+	max-width: var(--size-width-heading);
 }
 
 /* * */
-/* INFO GROUP WRAPPER */
+/* IMAGE */
 
-.infoGroupWrapper .label {
-	color: var(--color-system-text-300);
-	font-size: var(--font-size-muted);
-	font-weight: var(--font-weight-bold);
-	text-transform: uppercase;
-	padding-bottom: 3px;
-}
-
-.infoGroupWrapper .value {
-	color: var(--color-system-text-100);
-	font-size: var(--font-size-text);
-	font-weight: var(--font-weight-medium);
+.image {
+	aspect-ratio: 16 / 9;
+	overflow: hidden;
+	width: 100%;
+	max-width: 200px;
+	border-radius: 5px;
+	border: 1px solid var(--color-system-border-100);
+	background-color: var(--color-brand);
+	filter: blur(10px);
 }
