--- a/frontend/styles/reset.css
+++ b/frontend/styles/reset.css
@@ -26,7 +26,7 @@ a {
 	box-sizing: border-box;
 	user-select: none;
 	-webkit-touch-callout: none;
-	font-family: var(--font-inter), sans-serif;
+	font-family: var(--font-inter), sans-serif !important;
 	line-height: 1.4;
 }
 
