--- a/frontend/components/alerts/AlertsListItem/styles.module.css
+++ b/frontend/components/alerts/AlertsListItem/styles.module.css
@@ -17,23 +17,14 @@
 }
 
 /* * */
-/* ACTIVE PERIOD */
+/* INFO BAR */
 
-.activePeriod {
-	font-size: 10px;
-	font-weight: var(--font-weight-bold);
-	color: var(--color-system-text-300);
-	letter-spacing: 0.25px;
-	text-align: left;
-	text-transform: uppercase;
-}
-
-.activePeriod strong {
-	color: var(--color-system-text-200);
-}
-
-.activePeriod strong:first-child {
-	margin-right: var(--size-spacing-5);
+.infoBar {
+	display: flex;
+	flex-direction: row;
+	align-items: flex-start;
+	justify-content: flex-start;
+	gap: var(--size-spacing-15);
 }
 
 /* * */
