--- a/frontend/components/alerts/Single/styles.module.css
+++ b/frontend/components/alerts/Single/styles.module.css
@@ -4,8 +4,41 @@
 .infoBar {
 	display: flex;
 	flex-direction: row;
+	align-items: center;
+	justify-content: flex-start;
+	gap: var(--size-spacing-20);
+	padding-top: var(--size-spacing-15) !important;
+	flex-wrap: wrap;
+}
+
+/* * */
+/* CONTENT WRAPPER */
+
+.contentWrapper {
+	display: flex;
+	flex-direction: column;
 	align-items: flex-start;
 	justify-content: flex-start;
-	gap: var(--size-spacing-15);
-	padding-left: var(--size-spacing-5);
+	gap: var(--size-spacing-20);
+	max-width: var(--size-width-heading);
+}
+
+
+/* * */
+/* DESCRIPTION */
+
+.description {
+	line-height: 1.6;
+	font-size: var(--font-size-subheading);
+	font-weight: var(--font-weight-text);
+	color: var(--color-system-text-100);
+}
+
+/* * */
+/* IMAGE */
+
+.image {
+	overflow: hidden;
+	border-radius: 5px;
+	border: 1px solid var(--color-system-border-200);
 }
