--- a/frontend/components/alerts/AlertsListItemSkeleton/styles.module.css
+++ b/frontend/components/alerts/AlertsListItemSkeleton/styles.module.css
@@ -1,27 +1,21 @@
 .container {
 	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
+	flex-direction: row;
+	align-items: center;
 	justify-content: flex-start;
-	gap: var(--size-spacing-5);
+	gap: var(--size-spacing-15);
 	padding: var(--size-spacing-20);
-	border-top: 1px solid var(--color-system-border-100);
 	background-color: var(--color-system-background-100);
 }
 
+.icon {
+	width: 20px;
+	height: 20px;
+	border-radius: 999px;
+}
+
 .title {
-	width: 140px;
-	height: 18px;
-}
-
-.label {
-	width: 100px;
-	height: 12px;
-	margin-top: 10px;
-}
-
-.value {
-	width: 20%;
-	min-width: 300px;
-	height: 14px;
+	width: 100%;
+	max-width: 500px;
+	height: 15px;
 }
