--- a/frontend/components/home/MetricsSectionDemand/styles.module.css
+++ b/frontend/components/home/MetricsSectionDemand/styles.module.css
@@ -7,6 +7,7 @@
 	border-radius: 5px;
 	border: 1px solid var(--color-system-border-100);
 	background-color: var(--color-system-background-100);
+	position: relative;
 }
 
 /* * */
