--- a/frontend/components/footer/Footer/styles.module.css
+++ b/frontend/components/footer/Footer/styles.module.css
@@ -2,8 +2,8 @@
 /* CONTAINER */
 
 .container {
-  display: flex;
-  flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
 
 @media (max-width: 500px) {
@@ -16,11 +16,11 @@
 /* SECTION WRAPPER */
 
 .sectionWrapper {
-  display: flex;
+	display: flex;
 	flex-direction: column;
 	gap: var(--size-spacing-20);
 	padding: var(--size-spacing-20);
-  background-color: var(--color-system-background-100);
+	background-color: var(--color-system-background-100);
 	border-top: 1px solid var(--color-system-border-100);
 }
 
@@ -28,7 +28,7 @@
 /* LINKS WRAPPER */
 
 .linksWrapper {
-  display: flex;
+	display: flex;
 	flex-direction: row;
 	gap: var(--size-spacing-30);
 }
@@ -44,9 +44,9 @@
 /* PRIMARY LINK */
 
 .primaryLink {
-  font-size: var(--font-size-subtitle);
-  font-weight: var(--font-weight-subtitle);
-	color: var(--color-system-text-100);
+	font-size: var(--font-size-text);
+	font-weight: var(--font-weight-subtitle);
+	color: var(--color-system-text-200);
 }
 
 .primaryLink:hover {
