--- a/frontend/components/lines/PageToolbar/styles.module.css
+++ b/frontend/components/lines/PageToolbar/styles.module.css
@@ -6,3 +6,10 @@
 	flex-direction: column;
 	gap: var(--size-spacing-15);
 }
+
+/* * */
+/* FOUND ITEMS COUNTER WRAPPER */
+
+.foundItemsCounterWrapper {
+	padding-top: 0 !important;
+}
