--- a/frontend/components/lines/Single/styles.module.css
+++ b/frontend/components/lines/Single/styles.module.css
@@ -1,3 +1,34 @@
+/* * */
+/* HEADING SECTION */
+
+.headingSection {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: flex-start;
+	gap: var(--size-spacing-15);
+}
+
+/* * */
+/* HEADING SECTION / ROW */
+
+.headingSectionRow {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: center;
+	gap: var(--size-spacing-15);
+}
+
+
+
+
+/* * */
+/* * */
+/* * */
+/* * */
+/* * */
+
 .pageWrapper{
     display: flex;
     flex-direction: column;
