--- a/frontend/styles/overrides/TextInput.module.css
+++ b/frontend/styles/overrides/TextInput.module.css
@@ -9,6 +9,7 @@
 	padding: var(--size-spacing-15);
 	border: 1px solid var(--color-system-border-200);
 	border-radius: 5px;
+	background-color: var(--color-system-background-100);
 }
 
 .input::placeholder {
