--- a/frontend/components/common/SelectOperationalDay/styles.module.css
+++ b/frontend/components/common/SelectOperationalDay/styles.module.css
@@ -10,9 +10,9 @@
 
 .innerWrapper {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr auto;
     padding: 5px;
-    height: 50px;
+    min-height: 50px;
     background-color: var(--color-system-background-300);
     border-radius: 5px;
 }
