Fix flash on white variant of segmentedControl

--- a/frontend/styles/overrides/SegmentedControl.module.css
+++ b/frontend/styles/overrides/SegmentedControl.module.css
@@ -48,6 +48,10 @@
 
 .label[data-active="true"] {
 	color: var(--color-system-text-100);
+}
+
+/* Fix flashing before loading js, but don't apply to white variant */
+.label[data-active="true"]:not(.variantWhite) {
 	--sc-color: var(--color-system-background-100);
 }
 
