--- a/frontend/components/common/SelectOperationalDay/styles.module.css
+++ b/frontend/components/common/SelectOperationalDay/styles.module.css
@@ -10,20 +10,22 @@
 
 .innerWrapper {
     display: grid;
-    grid-template-columns: 1fr 1fr auto;
+    grid-template-columns: 1fr 1fr 1fr;
     padding: 5px;
     min-height: 50px;
     background-color: var(--color-system-background-300);
     border-radius: 5px;
 }
 
-.wrapper{
+.wrapper {
     height: 100%;
 }
 
 /* * */
 /* BUTTONS & INPUT */
-.button, .input{
+
+.button,
+.input {
     font-size: 17px;
     cursor: pointer;
     font-weight: 600;
@@ -38,12 +40,12 @@
     background: transparent;
 }
 
-.input{
-    padding-left: 38px;
+.input {
+    /* padding-left: 38px; */
 }
 
-
-.button[data-selected="true"], .input[data-selected="true"] {
+.button[data-selected="true"],
+.input[data-selected="true"] {
     color: var(--color-system-text-200);
     background: var(--color-system-background-100);
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
@@ -54,6 +56,6 @@
     --input-section-color: var(--color-system-text-200)
 }
 
-.section{
+.section {
     padding-left: 12px;
 }
