--- a/frontend/components/header/NavigationAccount/styles.module.css
+++ b/frontend/components/header/NavigationAccount/styles.module.css
@@ -23,3 +23,10 @@
 .componentWrapper {
 	padding: var(--size-spacing-15);
 }
+
+/* * */
+/* COMPONENT WRAPPER */
+
+.topBorder {
+	border-top: 1px solid var(--color-system-border-100);
+}
